assets/dananke/scss/base.scss
@import 'common-mixins.scss';

@mixin clear-fix($selector) {
    .#{$selector}:after, .#{$selector}:before {
        content: " ";
        display: table;
    }

    .#{$selector}:after {
        clear: both;
    }
}

@mixin center-block {
    margin-left: auto;
    margin-right: auto;
}

html {
    font-size: var(--base-font-size, 12pt);
}

body, input, textarea, button {
    font-size: var(--base-font-size, 12pt);
}

.whole-body {
    background-color: var(--whole-doc-bg-colour, #eee);
    display: flex;
    flex-flow: column nowrap;
    font-family: var(--default-font-family, san-serif);
    font-size: 15pt;
    left: 0;
    line-height: 1.2;
    margin: 0;
    position: relative;
    top: 0;
    z-index: 0;
}

.border-box, a, article, aside, blockquote, body, code, dd, div, dl, dt, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, html, input[type=email], input[type=number], input[type=password], input[type=tel], input[type=text], input[type=url], legend, li, main, nav, ol, p, pre, section, table, td, textarea, th, tr, ul {
    box-sizing: border-box;
}

.content-box, hr {
    box-sizing: content-box;
}

.main-block {
    display: block;
    padding-bottom: 0;
}

.nav-page-dananke {
    font-size: 1.2rem;
    overflow: visible;
    padding-left: 1rem;
    padding-right: 1rem;
    width: 100%;
}

.main-navigation {
    background-color: var(--main-nav-bg-colour, #00449e);
}

.main-navigation {
    display: flex;
    flex: 1 1 100%;
    flex-direction: column;
    justify-content: space-between;
    padding: 0;
    width: 100%;

    @include center-block;
}

.list-dananke {
    display: flex;
    flex: 1 1 100%;
    flex-direction: column;
    justify-content: space-between;
    list-style: none;
    margin-left: 0;
    margin-right: 0;
    padding: 0;
    width: 100%;

    @include center-block;
}

.main-nav-details > summary {
    list-style-image: var(--hamburger-icon);
    height: 32px;
    padding: 8px;
    position: absolute;
    width: 32px;
    z-index: 3;
}

.main-nav-details .main-navigation-mobile {
    background-color: var(--main-nav-bg-colour, #00449e);
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    padding: 1rem;
    position: relative;
    visibility: visible;
    width: 100%;
    z-index: 2;

    @include center-block;
}

.main-nav-details + .main-navigation {
    display: none;
    visibility: hidden;
}

.main-nav-details ~ .site-header .page-title-banner {
    margin-top: 1.5em;
}

.site-title {
    color: rgba(255, 255, 255, 0.8);
    font-size: 1.5rem;
    font-weight: 400;
    padding-bottom: 1rem;
}

.main-navigation-mobile .site-title {
    flex: 1 1 100%;
    margin-top: 1em;
}

.lang-title {
    color: rgba(255, 255, 255, 0.9);
}

.site-link {
    display: block;
    max-width: 100%;
}

.title-link {
    text-decoration: none;
}

.title-link:hover {
    color: white;
    text-decoration: underline;
}

.site-image {
    height: auto;
    width: auto;
    max-width: 100%;
}

.hide {
    display: none;
}

.lang-list {
    padding-left: 0;
}

.lang-item {
    font-size: 1rem;
}

.title-nav-item {
    display: inline-block;
    list-style: none;
    font-weight: 400;
    padding-right: 1rem;
}

.title-menu-list {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    margin-right: 1rem;
    padding-bottom: 0;
    padding-left: 0;
}

.title-menu-item {
    font-size: 1.25rem;
}

.title-menu-link {
    color: rgba(255, 255, 255, 0.9);
}

.social-title-link {
    margin-right: .25rem;
    padding-bottom: .5rem;
    padding-top: 1rem;
    z-index: 999;
}

.article-404 {
    padding-bottom: 4rem;
    padding-top: 4rem;

    @include center-block;
}

@include clear-fix(article-404);

.message-404-title {
    background-color: #111;
    border-radius: 9999px;
    color: #ccc;
    display: block;
    font-family: var(--message-404-title-font-family);
    font-size: 2.5rem;
    max-width: 23em;
    margin-bottom: 3rem;
    margin-top: 0;
    padding: 1rem;
    text-align: center;

    @include center-block;
}

.message-404-box {
    background-color: #cdecff;
    border-radius: 1rem;
    color: navy;
    font-size: 1.5rem;
    padding: 2rem;
    width: 100%;

    @include center-block;
}

.message-404-box .message-404-item {
    list-style: none;
    margin-left: 2rem;
    padding: 1rem;
}

.message-404-box .message-404-item a {
    color: #038;
}

.list-article {
    color: var(--main-text-colour);
    line-height: 1.5;
    font-size: 1.5rem;
    max-width: 34em;
    padding-bottom: 0;
    padding-left: 1rem;
    padding-right: 1rem;
    padding-top: 0;

    @include center-block;
}

@include clear-fix("list-article");

.main-article {
    display: flex;
    flex-flow: row wrap;
    color: var(--main-text-colour);
    line-height: 1.5;
    font-size: 1.5rem;
    padding-left: 1rem;
    padding-bottom: 0;
    padding-right: 1rem;
    padding-top: 0;

    @include center-block;
}

@include clear-fix("main-article");

.main-article .main-header {
    flex: 1 1 100%;
    margin-top: 1rem;
    max-width: 100%;
}

.no-article-date .article-datetime, .no-article-reading .article-reading {
    display: none;
}

.main-article:not(.no-article-date):not(.no-article-reading) {
    & .article-datetime + .article-reading::before {
        content: "—";
    }
}

.article-timeinfo {
    white-space: normal;
    word-break: normal;
}

.main-article-content {
    color: var(--main-text-colour);
    display: block;
    flex: 1 1 100%;
    line-height: 1.5;
    font-size: 1.4rem;
    max-width: 100%;
    padding: 0;

    @include chooseFontFamily("font-family", "athelas");
}

.list-article .main-article-content.taxonomy-note {
    @include chooseFontFamily("font-family", "avenir");
}

.main-article .context-menu-item {
    background-color: #e0e0e0;
    border-radius: 1em;
    line-height: 1.5;
    padding: .875rem 1.5rem;
}
/* ... */

